[gd_scene load_steps=4 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_mainmenu"]

[sub_resource type="Environment" id="1"]
background_mode = 1
background_color = Color(0.1, 0.15, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.2, 0.25, 0.3, 0.9)

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.15, 0.2, 0.25, 0.95)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ESCAPE ROOM"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "6 Niveles de Aventura"
horizontal_alignment = 1

[node name="Space" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nuevo Juego"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continuar"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Seleccionar Nivel"

[node name="ProgressButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ver Progreso"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[node name="LevelSelectPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelectPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Selecciona un Nivel"
horizontal_alignment = 1

[node name="Level1Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 1: Tutorial"
disabled = false

[node name="Level2Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 2: Botones"
disabled = true

[node name="Level3Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 3: Tarjetas"
disabled = true

[node name="Level4Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 4: Plataformas"
disabled = true

[node name="Level5Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 5: Secuencia"
disabled = true

[node name="Level6Button" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nivel 6: Laseres"
disabled = true

[node name="BackButton" type="Button" parent="LevelSelectPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volver"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level1Button" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level2Button" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level3Button" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level4Button" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level5Button" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/Level6Button" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="LevelSelectPanel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
